--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-streamlit>=1.31.0
-streamlit-aggrid>=0.3.4.post3
-langchain>=0.2.2
-langchain-community>=0.0.20
-langchain-huggingface>=0.0.5
-groq>=0.4.0
-sentence-transformers>=2.2.2
-faiss-cpu>=1.7.4
-pandas>=2.2.1
-openpyxl>=3.1.2
-folium>=0.15.1
-torch==2.1.2
+streamlit
+streamlit-aggrid
+langchain
+langchain-community
+langchain-huggingface
+groq
+sentence-transformers
+faiss-cpu
+pandas
+openpyxl
+folium
